--- a/screens-styles/home-screens.css
+++ b/screens-styles/home-screens.css
@@ -13,7 +13,7 @@
 
     .video>.video-home>iframe{
         width: 445px;
-        height: 230px;
+        height: 280px;
         transition: all 0.5s;
     }
 
@@ -27,13 +27,23 @@
 
     .video>.video-home>iframe{
         width: 460px;
-        height: 240px;
+        height: 290px;
         transition: all 0.5s;
     }
 
 }
 
 @media screen  and (min-width:992px) and (max-width:1199px){
+
+    h3, p {
+        text-align: start;
+        text-indent: 0px;
+    }
+
+    h3{
+        text-indent: 15px;
+    }
+    
 
     .resumo{
         display: flex;
@@ -47,8 +57,8 @@
     .resumo>div>.imghome2 {
         display: block;
         width: 290px;
-        height: 420px;
-        margin: 0px 20px;
+        height: 400px;
+        margin: 0px 10px;
         border-radius: 10px;
     }
     
@@ -59,13 +69,22 @@
     
     .video>.video-home>iframe{
         width: 620px;
-        height: 324px;
+        height: 400px;
         transition: all 0.5s;
     }
 
 }
 
 @media screen  and (min-width:1200px) {
+
+    h3, p {
+        text-align: start;
+        text-indent: 0px;
+    }
+
+    h3{
+        text-indent: 15px;
+    }
 
     .resumo{
         display: flex;
@@ -79,8 +98,8 @@
     .resumo>div>.imghome2 {
         display: block;
         width: 290px;
-        height: 420px;
-        margin: 0px 20px;
+        height: 400px;
+        margin: 0px 10px;
         border-radius: 10px;
     }
     
@@ -91,7 +110,7 @@
 
     .video>.video-home>iframe{
         width: 720px;
-        height: 376px;
+        height: 430px;
         transition: all 1s;
     }
 
