design interrompido devido a falta de conteudo

--- a/styles/principal.css
+++ b/styles/principal.css
@@ -373,6 +373,7 @@ main {
 
 .contato>.contato-apps>a>.img-appstore, .img-googleplay {
     width: 210px;
+    border-radius: 0px;
     margin: 5px;
 }
 
