--- a/styles/guia-tricaru.css
+++ b/styles/guia-tricaru.css
@@ -6,36 +6,38 @@
 }
 
 .box-img-verde>.img-verde-tricarus{
-    width: 95px;
-    margin-bottom: 0px;
+    width: 90px;
+    margin:0px;
     box-shadow: none;
+    transition: all 0.5s;
 }
 
 .box-img-tricaru{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 15px;
 }
 
 .box-img-tricaru>.imgs-tricaru{
-    width: 100px;
-    box-shadow: none;
+    width: 95px;
+    height:90px ;
+    box-shadow: none;    
+    margin-bottom: 5px;
+    margin-top: 0px;
+    transition: all 0.5s;
 }
 
 .box-imgs-runa-skill{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
 }
 
 .box-imgs-runa-skill>.img-fullguard, .img-tricaru-skill {
-    width: 260px;
-    height: 240px;
-    border-radius: 5%;
+    width: 280px;
+    height: 280px;
     margin-bottom: 15px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.30);
+    transition: all 0.5s;
 }
 
 .box-imgs-runa-skill>.img-fullguard{
@@ -53,30 +55,38 @@
 }
 
 .tabela-tricaru-metade {
-    width: 260px;
+    width: 280px;
     border-radius: 5px;
+    transition: all 0.5s;
 }
 
 .box-img-verde>.img-verde{
-    width: 95px;
+    width: 110px;
     box-shadow: none;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    transition: all 0.5s;
 }
 
 .box-img-verde>.img-verde-runas {
-    width:270px;
+    width: 290px;
+    transition: all 0.5s;
 }
 
-#video-tricaru{
+.video-tricaru{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#video-tricaru>iframe{
-    border-radius: 10px 10px;
+.video-tricaru>iframe{
+    border-radius: 10px;
+    width: 285px;
+    height: 285px;
     border: 0px;
-    border: 5px solid black;
+    border: 3px solid black;
     margin-bottom: 15px;
+    transition: all 0.5s;
 }
 
 .text-center>p{
