--- a/styles/guia-tricaru.css
+++ b/styles/guia-tricaru.css
@@ -35,7 +35,7 @@
 
 .box-imgs-runa-skill>.img-fullguard, .img-tricaru-skill {
     width: 280px;
-    height: 280px;
+    height: 250px;
     margin-bottom: 15px;
     transition: all 0.5s;
 }
@@ -73,6 +73,11 @@
     transition: all 0.5s;
 }
 
+.box-img-verde>.img-verde-runas2 {
+    display: none;
+    transition: all 0.5s;
+}
+
 .video-tricaru{
     display: flex;
     flex-direction: column;
@@ -82,7 +87,7 @@
 .video-tricaru>iframe{
     border-radius: 10px;
     width: 285px;
-    height: 285px;
+    height: 240px;
     border: 0px;
     border: 3px solid black;
     margin-bottom: 15px;
